# transactid-library-python

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: test_invoice_requests.py  test_payment.py  test_payment_ack.py  test_payment_request.py
transactid/: exceptions.py  paymentrequest.proto  paymentrequest_pb2.py  requirements.txt  transactid.py
transactid/certs/: netki_inter.pem  netki_root.pem
