[tool.poetry]
name = "transactid"
version = "0.1.0a3"
license = "BSD-3-Clause"
readme = "README.md"
description = "A package for working with BIP75 and BIP70 in a Python environment."
authors = ["Jeremy Kenyon <jeremy@netki.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
cryptography = "2.7"
protobuf = "3.9.2"
certvalidator = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
